[project]
name = "khinsider-downloader"
version = "0.2.1"
description = ""
authors = [{ name = "NovaHFly", email = "mugiviska@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "httpx>=0.28.1,<0.29",
    "beautifulsoup4>=4.12.3,<5",
    "lxml>=5.3.0,<6",
    "tenacity>=9.0.0,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
