[project]
name = "khinsider-downloader"
version = "0.3.3"
description = ""
authors = [{ name = "NovaHFly", email = "mugiviska@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "lxml>=5.3.0,<6",
    "tenacity>=9.0.0,<10",
    "cloudscraper",
    "deprecation>=2.1.0",
]

[tool.hatch.build.targets.wheel]
include = ['khinsider']

[tool.uv.sources]
cloudscraper = { git = "https://github.com/venomous/cloudscraper", rev = "3.0.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
testing = [
    "ruff>=0.12.0",
]
